--- a/uvs.html
+++ b/uvs.html
@@ -334,14 +334,233 @@
                             <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
 
+        <div class="container7">
+            <a class="contents-text" href="https://www.univstore.com/event?type=content"><h1>CONTENTS ></h1></a>
+            <a class="contents-picture" href="https://www.univstore.com/event/20231103_contents_keychron_b_series" style="background-image: url('https://image.univstore.com/202311103_contents_keychron_b_series_mainpage_w.png')" >
+                <div class="cp-textbox">
+                    <div class="cp-tb1">팝콘같이 팝팝</div>
+                    <div class="cp-tb2">키크론 B 시리즈</div>
+                    <div class="cp-tb3">Be the good KEYBOARD with 키크론! 기계식 키보드 매니아에게 커다란 사랑을 받아 온 키크론에서 초슬림 펜타그래프의 B시리즈를 출시했어요! 팝콘같이 팝팝 튀는 다채로운 컬러의 B시리즈를 구경해볼까요?</div>
+                    <div class="cp-tb4">더보기 > </div>
+                </div>
+            </a>
+            <div class="contents-item">
+                <div class="citem-box">        <!-- 1 -->
+                    <a class="citem-picture" href="https://www.univstore.com/item/34637" style="background-image: url('https://image.univstore.com/B1-K5_thumbnail-01-F5.jpg')"></a>
+                    <div class="citem-explanation">
+                        <a class="corp" href="https://www.univstore.com/brand/keychron">키크론 ></a>
+                        <a class="item-corp" href="https://www.univstore.com/item/34637">B1 라벤더퍼플 4in1 블루투스 무선 슬림 미니 키보드 펜타그래프</a>
+                        <p class="item-price">44,000원</p>
+                        <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                    </div>
+                </div>
 
+                <div class="citem-box">        <!-- 2 -->
+                    <a class="citem-picture" href="https://www.univstore.com/item/34638" style="background-image: url('https://image.univstore.com/B1-K4_thumbnail-01-F5.jpg')"></a>
+                    <div class="citem-explanation">
+                        <a class="corp" href="https://www.univstore.com/brand/keychron">키크론 ></a>
+                        <a class="item-corp" href="https://www.univstore.com/item/34638">B1 블라썸핑크 4in1 블루투스 무선 슬림 미니 키보드 펜타그래프</a>
+                        <p class="item-price">44,000원</p>
+                        <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                    </div>
+                </div>
 
+                <div class="citem-box">        <!-- 3 -->
+                    <a class="citem-picture" href="https://www.univstore.com/item/34633" style="background-image: url('https://image.univstore.com/B6-K6_thumbnail-01-F5.jpg')"></a>
+                    <div class="citem-explanation">
+                        <a class="corp" href="https://www.univstore.com/brand/keychron">키크론 ></a>
+                        <a class="item-corp" href="https://www.univstore.com/item/34633">B6 레몬옐로우 4in1 블루투스 무선 슬림 풀 키보드 펜타그래프</a>
+                        <p class="item-price">54,000원</p>
+                        <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                    </div>
+                </div>
 
-        <div style="background-color:aquamarine; height: 300px;"></div>
+                <div class="citem-box">        <!-- 4 -->
+                    <a class="citem-picture" href="https://www.univstore.com/item/34634" style="background-image: url('https://image.univstore.com/B6-K7_thumbnail-01-F5.jpg')"></a>
+                    <div class="citem-explanation">
+                        <a class="corp" href="https://www.univstore.com/brand/keychron">키크론 ></a>
+                        <a class="item-corp" href="https://www.univstore.com/item/34634">B6 민트그린 4in1 블루투스 무선 슬림 풀 키보드 펜타그래프</a>
+                        <p class="item-price">54,000원</p>
+                        <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container8">
+            <a class="ct8-classbox" href="https://www.univstore.com/event/20230801_class101_launching">
+                <div class="class101"></div>
+            </a>
+        </div>
+
+        <div class="container6">  <!-- 컨테이너6과 같음 -->
+            <h1 class="recommed-pick">새로운 ITEM</h1>
+            <div class="box6">
+                <div class="item-box">
+                    <div class="it-item"> <!-- 1 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/36093" style="background-image: url('https://image.univstore.com/EOS_R50_18-45_KIT-BK_thumbnail-01-v2.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/canon">Canon></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/36093">[카카오페이 추가할인] EOS R50 18-45 KIT 미러리스 카메라 블랙 (RF-S 18-45 렌즈포함)</a>
+                            <p class="item-name">EOS_R50_18-45_KIT-BK</p>
+                            <p class="item-price">1,199,000원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 2 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/37134" style="background-image: url('https://image.univstore.com/EI-T5600BBEGKR_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/samsung">삼성></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/37134">갤럭시 스마트태그2 블랙</a>
+                            <p class="item-name">EI-T5600BBEGKR</p>
+                            <p class="item-price">36,300원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 3 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/35903" style="background-image: url('https://image.univstore.com/PAN222A001BA1_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/pandora">판도라></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/35903">판도라 로즈골드 빈티지 얼루어 펜던트 엔드 네크리스 로즈골드</a>
+                            <p class="item-name">PAN222A001BA1</p>
+                            <p class="item-price">260,000원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 4 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/36247" style="background-image: url('https://image.univstore.com/63020086-02P116-CN_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/vivienne-westwood">비비안 웨스트우드></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/36247">[카카오페이/KB페이 추가할인] 23FW 비비안웨스트우드 미니 바스 목걸이 실버 크리스탈</a>
+                            <p class="item-name">63020086-02P116-CN</p>
+                            <p class="item-price">246,800원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 5 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/36227" style="background-image: url('https://image.univstore.com/COCSXM61446_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/apc">A.P.C></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/36227">[카카오페이/KB페이 추가할인] 23SS 아페쎄 다니엘라 데님 인디고 에코백</a>
+                            <p class="item-name">COCSXM61446</p>
+                            <p class="item-price">120,900원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 6 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/36244" style="background-image: url('https://image.univstore.com/2302-003-010010325_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/hvisk">비스크></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/36244">23FW 비스크 아카디아 숄더백 비비드 그린</a>
+                            <p class="item-name">2302-003-010010325</p>
+                            <p class="item-price">98,800원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 7 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/36408" style="background-image: url('https://image.univstore.com/H0207_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/oa">오아></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/36408">플렌티무드 미니 소형 초음파 무드등 가습기</a>
+                            <p class="item-name">H0207</p>
+                            <p class="item-price">54,900원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                    <div class="it-item"> <!-- 8 -->
+                        <a class="item-picture" href="https://www.univstore.com/item/36827" style="background-image: url('https://image.univstore.com/DUU23166W2_thumbnail-01.jpg')"></a>
+                        <div class="item-explanation">
+                            <a class="corp" href="https://www.univstore.com/brand/eider">아이더></a>
+                            <a class="item-corp" href="https://www.univstore.com/item/36827">[카카오페이 추가할인] GRID (그리드) UNI 플리스 자켓 크림</a>
+                            <p class="item-name">DUU23166W2_90</p>
+                            <p class="item-price">119,000원</p>
+                            <a class="item-sale" href="https://www.univstore.com/user/login?redirect=/item/3371">대학생 인증 후 가격 확인</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container9">
+            <a class="company" href="https://www.univstore.com/brand/apple" style="background-image: url('https://image.univstore.com/apple_1102.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/samsung" style="background-image: url('https://image.univstore.com/samsung_1102.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/lg" style="background-image: url('https://image.univstore.com/lg_1102.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/sony" style="background-image: url('https://image.univstore.com/sony_1102.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/bose" style="background-image: url('https://image.univstore.com/brandlogo-bose-20230425.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/playstation" style="background-image: url('https://image.univstore.com/brandlogo_playstation_221219.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/hancom" style="background-image: url('https://image.univstore.com/brandlogo_hancom_230209.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/logitech" style="background-image: url('https://image.univstore.com/logitech_1102.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/hp" style="background-image: url('https://image.univstore.com/brandlogo-hp-20231111.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/canon" style="background-image: url('https://image.univstore.com/brandlogo_canon_20231113_000000.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/keychron" style="background-image: url('https://image.univstore.com/brandlogo_keychron_20231114.png')"></a>
+            <a class="company" href="https://www.univstore.com/brand/wacom" style="background-image: url('https://image.univstore.com/wacom_1102.png')"></a>
+        </div>
+
+        <div class="container10">
+            <h3 class="ct10-textbox">믿고 살 수 있는 학생복지스토어</h3>   
+            <div class="ct10-explanbox">
+                <div class="ct10-expicutre" style="background-image:url('https://www.univstore.com/image/ic-money.png')"></div>
+                <div class="ct10-extitle1">대학생 혜택을 위한 저렴한 가격</div>
+                <div class="ct10-extitle2">다양한 유명 브랜드의 인기 상품을<br/>합리적인 가격으로 만나보세요.</div>
+            </div>
+            <div class="ct10-explanbox">
+                <div class="ct10-expicutre" style="background-image:url('https://www.univstore.com/image/ic-payment.png')"></div>
+                <div class="ct10-extitle1">안전한 이니시스 결제 시스템 이용</div>
+                <div class="ct10-extitle2">국내 1위 PG사인 이니시스의<br/>결제 시스템을 사용하고 있습니다.</div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="container11">
+                <div class="ct11-textbox">
+                    <div class="ct11-tb1">
+                        <p class="ct11-tb1-box1">학생복지스토어 고객센터</p>
+                        <a class="ct11-tb1-box2" href="">02-6352-9331</a>
+                        <p class="ct11-tb1-box3">평일 10:00~18:00 / 점심시간 12:00~13:00</p>
+                        <p class="ct11-tb1-box4">주말, 공휴일 휴무</p>
+                        <div class="ct11-tb1-box5">
+                            <a class="ct11-tb1-box5-a1" href="mailto:hoo6710@naver.com">help@univstore.com</a>
+                            <a class="ct11-tb1-box5-a2" href="https://www.univstore.com/user/login?redirect=/user/my#user_qna">1:1 문의하기</a>
+                        </div>
+                    </div>
+                    <div class="ct11-tb2">
+                        <div class="ct11-tb2-box1">
+                            <div class="ct11-tb2-box1-div1">
+                                <a href="https://www.univstore.com/notice">공지사항 | </a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScdGBn69_KYVBqBNboJPDah0UBJ2XLSMJd-oca6iRM1Pu-WzQ/viewform?pli=1">입점/제휴문의</a>
+                            </div>
+                            <div class="ct11-tb2-box1-div2">
+                                <a href="https://www.univstore.com/policy/terms">사이버몰 이용약관 | </a>
+                                <a href="https://www.univstore.com/policy/privacy"><b>개인정보처리방침</b></a>
+                                <a href="https://ftc.go.kr/bizCommPop.do?wrkr_no=3768801262">| 사업자 정보 확인 | </a>
+                                <a href="https://www.univstore.com/policy/consumer">소비자 불만/분쟁해결기준</a>
+                            </div>
+                        </div>
+                        <div class="ct11-tb2-box2">
+                            <img src="https://www.univstore.com/image/seller-info-company.png">
+                            <img src="https://www.univstore.com/image/seller-info-1-new.png"><br/>
+                            <img src="https://www.univstore.com/image/seller-info-2-new.png">
+                            <img src="https://www.univstore.com/image/seller-info-3-new.png">
+                            <img src="https://www.univstore.com/image/seller-info-4-new.png">
+                            <img src="https://www.univstore.com/image/seller-info-5-new.png">
+                        </div>
+                        <div class="ct11-tb2-box3">
+                            <a class="ct11-tb2-box3-img" href="https://www.instagram.com/everyuneez.official/" style="background-image: url('https://www.univstore.com/image/ic-instagram.png');"></a>
+                            <a class="ct11-tb2-box3-instagram" href="https://www.instagram.com/everyuneez.official/">Instagram</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="ct11-explan">
+                    <p class="ct11-extext">유니브스토어(주)에서 판매하는 상품 중에는 개별 판매자가 판매하는 상품이 포함되어 있습니다.
+                        <br/>개별판매자가 판매하는 상품에 대해 유니브스토어(주)는 통신중개판매업자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.
+                    </p>
+                </div>
+                
+            </div>
+        </footer>
     </body>
 </html>
